--- a/test-output/index.html
+++ b/test-output/index.html
@@ -102,27 +102,27 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.LossBreakageTest" hash-for-method="doLoginTest">doLoginTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentOrderTest" hash-for-method="doIndentOrderTest">doIndentOrderTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.LossBreakageTest" hash-for-method="doLossAndBreakageTest">doLossAndBreakageTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentOrderTest" hash-for-method="doLoginTest">doLoginTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.LossBreakageTest" hash-for-method="doNavigateLossBreakageLinkTest">doNavigateLossBreakageLinkTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentOrderTest" hash-for-method="doNavigateIndentOrderLinkTest">doNavigateIndentOrderLinkTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.LossBreakageTest" hash-for-method="doNavigateToHISHomeTest">doNavigateToHISHomeTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentOrderTest" hash-for-method="doNavigateToHISHomeTest">doNavigateToHISHomeTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.LossBreakageTest" hash-for-method="doNavigateToSelectHospitalLocationTest">doNavigateToSelectHospitalLocationTest</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.qa.tests.IndentOrderTest" hash-for-method="doNavigateToSelectHospitalLocationTest">doNavigateToSelectHospitalLocationTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -140,9 +140,16 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.qa.tests.LossBreakageTest</span>
+              <span class="class-name">com.qa.tests.IndentOrderTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="doIndentOrderTest">
+                  </a> <!-- doIndentOrderTest -->
+                  <span class="method-name">doIndentOrderTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
                   <a name="doLoginTest">
@@ -152,16 +159,9 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="doLossAndBreakageTest">
-                  </a> <!-- doLossAndBreakageTest -->
-                  <span class="method-name">doLossAndBreakageTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="doNavigateLossBreakageLinkTest">
-                  </a> <!-- doNavigateLossBreakageLinkTest -->
-                  <span class="method-name">doNavigateLossBreakageLinkTest</span>
+                  <a name="doNavigateIndentOrderLinkTest">
+                  </a> <!-- doNavigateIndentOrderLinkTest -->
+                  <span class="method-name">doNavigateIndentOrderLinkTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -195,7 +195,7 @@
   &lt;/listeners&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test1&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.qa.tests.LossBreakageTest&quot;/&gt;
+      &lt;class name=&quot;com.qa.tests.IndentOrderTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test1 --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -237,30 +237,30 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'doLossAndBreakageTest')
-data.setCell(0, 2, 'com.qa.tests.LossBreakageTest')
-data.setCell(0, 3, 9441);
+data.setCell(0, 1, 'doNavigateToSelectHospitalLocationTest')
+data.setCell(0, 2, 'com.qa.tests.IndentOrderTest')
+data.setCell(0, 3, 42703);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'doNavigateToSelectHospitalLocationTest')
-data.setCell(1, 2, 'com.qa.tests.LossBreakageTest')
-data.setCell(1, 3, 5772);
+data.setCell(1, 1, 'doIndentOrderTest')
+data.setCell(1, 2, 'com.qa.tests.IndentOrderTest')
+data.setCell(1, 3, 3392);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'doLoginTest')
-data.setCell(2, 2, 'com.qa.tests.LossBreakageTest')
-data.setCell(2, 3, 5613);
+data.setCell(2, 1, 'doNavigateToHISHomeTest')
+data.setCell(2, 2, 'com.qa.tests.IndentOrderTest')
+data.setCell(2, 3, 1225);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'doNavigateToHISHomeTest')
-data.setCell(3, 2, 'com.qa.tests.LossBreakageTest')
-data.setCell(3, 3, 3015);
+data.setCell(3, 1, 'doLoginTest')
+data.setCell(3, 2, 'com.qa.tests.IndentOrderTest')
+data.setCell(3, 3, 1220);
 data.setCell(4, 0, 4)
-data.setCell(4, 1, 'doNavigateLossBreakageLinkTest')
-data.setCell(4, 2, 'com.qa.tests.LossBreakageTest')
-data.setCell(4, 3, 1120);
+data.setCell(4, 1, 'doNavigateIndentOrderLinkTest')
+data.setCell(4, 2, 'com.qa.tests.IndentOrderTest')
+data.setCell(4, 3, 871);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 49 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -286,34 +286,34 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.qa.tests.LossBreakageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.qa.tests.IndentOrderTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setuptest</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">doLoginTest</span>
-                <span class="method-start">5299 ms</span>
+                <span class="method-start">4020 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">doNavigateToSelectHospitalLocationTest</span>
-                <span class="method-start">10916 ms</span>
+                <span class="method-start">5240 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">doNavigateToHISHomeTest</span>
-                <span class="method-start">16691 ms</span>
+                <span class="method-start">47946 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">doNavigateLossBreakageLinkTest</span>
-                <span class="method-start">19708 ms</span>
+                <span class="method-name">doNavigateIndentOrderLinkTest</span>
+                <span class="method-start">49171 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">doLossAndBreakageTest</span>
-                <span class="method-start">20832 ms</span>
+                <span class="method-name">doIndentOrderTest</span>
+                <span class="method-start">50042 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">teardown</span>
-                <span class="method-start">30275 ms</span>
+                <span class="method-start">53434 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
